objects/Venue__c/Venue__c.object-meta.xml
<CustomObject>
    <description>Represents physical or virtual event venues with capacity limits and contact details.</description>
    <label>Venue</label>
    <nameField>
        <label>Venue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Venues</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>