objects/Venue__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Physical address of the venue</description>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>