objects/Venue__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City where the venue is situated</description>
    <label>City</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>