objects/Venue__c/fields/Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person__c</fullName>
    <description>Name of the primary contact person at the venue</description>
    <label>Contact Person</label>
    <length>120</length>
    <type>Text</type>
</CustomField>