objects/Venue__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <description>Phone number for the venue's contact person</description>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>