objects/Venue__c/validationRules/Capacity_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Capacity_Positive</fullName>
    <active>true</active>
    <description>Ensures that Venue Capacity is strictly greater than zero.</description>
    <errorConditionFormula>Venue_Capacity__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Venue_Capacity__c</errorDisplayField>
    <errorMessage>Venue Capacity must be a positive number greater than zero.</errorMessage>
</ValidationRule>