objects/Venue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>City__c</columns>
    <columns>Venue_Capacity__c</columns>
    <columns>Status__c</columns>
    <columns>Contact_Person__c</columns>
    <columns>Contact_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Venues</label>
</ListView>